<resources>
    <string name="app_name">TestJobSearch</string>sours
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sours">Поиск</string>
    <string name="title_like">Избранное</string>
    <string name="title_responses">Отклики</string>
    <string name="title_message">Сообщения</string>
    <string name="title_profile">Профиль</string>
</resources>