<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp">
    <LinearLayout
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:background="?android:attr/windowBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/menu_not_click"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/menu_sours"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_linear_size"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_sours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/menu_margin_img_size"
                android:layout_marginLeft="@dimen/menu_margin_img_size"
                android:layout_marginRight="@dimen/menu_margin_img_size"
                android:layout_marginBottom="@dimen/menu_margin_img_size2"
                android:layout_weight="6"
                android:src="@drawable/img_sours"
                app:tint="@color/menu_not_click">
            </ImageView>
            <TextView
                android:id="@+id/text_sours"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="2"
                android:textSize="@dimen/menu_text_size"
                android:text="@string/title_sours"
                android:textColor="@color/material_dynamic_neutral70"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_like"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_linear_size"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_like"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/menu_margin_img_size"
                android:layout_marginLeft="@dimen/menu_margin_img_size"
                android:layout_marginRight="@dimen/menu_margin_img_size"
                android:layout_marginBottom="@dimen/menu_margin_img_size2"
                android:layout_weight="6"
                android:src="@drawable/img_heart"
                app:tint="@color/menu_not_click">
            </ImageView>
            <TextView
                android:id="@+id/text_like"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="2"
                android:textSize="@dimen/menu_text_size"
                android:text="@string/title_like"
                android:textColor="@color/material_dynamic_neutral70"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_responses"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_linear_size"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_responses"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/menu_margin_img_size"
                android:layout_marginLeft="@dimen/menu_margin_img_size"
                android:layout_marginRight="@dimen/menu_margin_img_size"
                android:layout_marginBottom="@dimen/menu_margin_img_size2"
                android:layout_weight="6"
                android:src="@drawable/img_responses"
                app:tint="@color/menu_not_click">
            </ImageView>
            <TextView
                android:id="@+id/text_responses"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="2"
                android:textSize="@dimen/menu_text_size"
                android:text="@string/title_responses"
                android:textColor="@color/material_dynamic_neutral70"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_message"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_linear_size"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_message"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/menu_margin_img_size"
                android:layout_marginLeft="@dimen/menu_margin_img_size"
                android:layout_marginRight="@dimen/menu_margin_img_size"
                android:layout_marginBottom="@dimen/menu_margin_img_size2"
                android:layout_weight="6"
                android:src="@drawable/img_message"
                app:tint="@color/menu_not_click">
            </ImageView>
            <TextView
                android:id="@+id/text_message"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="2"
                android:textSize="@dimen/menu_text_size"
                android:text="@string/title_message"
                android:textColor="@color/material_dynamic_neutral70"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menu_profile"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_linear_size"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/menu_margin_img_size"
                android:layout_marginLeft="@dimen/menu_margin_img_size"
                android:layout_marginRight="@dimen/menu_margin_img_size"
                android:layout_marginBottom="@dimen/menu_margin_img_size2"
                android:layout_weight="6"
                android:src="@drawable/img_profile"
                app:tint="@color/menu_not_click">
            </ImageView>
            <TextView
                android:id="@+id/text_profile"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_weight="2"
                android:textSize="@dimen/menu_text_size"
                android:text="@string/title_profile"
                android:textColor="@color/material_dynamic_neutral70"></TextView>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>